changed to local script

--- a/default.project.json
+++ b/default.project.json
@@ -3,10 +3,11 @@
   "tree": {
     "$className": "DataModel",
 
-    
-    "ServerScriptService": {
-      "InputHandler": {
-        "$path": "src"
+    "StarterPlayer": {
+      "StarterPlayerScripts": {
+        "InputHandler": {
+          "$path": "src"
+        }
       }
     },
 
